--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
     implementation "io.reactivex.rxjava3:rxjava:3.1.4"
     implementation('io.reactivex.rxjava3:rxkotlin:3.0.1')
+    implementation 'io.reactivex:rxjava-debug:1.0.3'
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.21"
     implementation('io.reactivex.rxjava2:rxkotlin:2.4.0')
